src/objects/E_Signed_Card__c.object
<CustomObject>
    <description>Contains eCard signed ups</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>E-Signed Card</relationshipLabel>
        <relationshipName>E_Signed_Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Added_To_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added To Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreed_To__c</fullName>
        <label>Agreed To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <formula>IF( Cell_Phone_chk__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cell Phone Chk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Union_Authorization_Submitted__c</fullName>
        <label>Date Union Authorization Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Hire__c</fullName>
        <label>Date of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Signed_Card_Notes__c</fullName>
        <description>I support forming a union with my co-workers because:</description>
        <inlineHelpText>I support forming a union with my co-workers because:</inlineHelpText>
        <label>E-Signed Card Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getfeedback_Response_Link__c</fullName>
        <label>Getfeedback Response Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HP__c</fullName>
        <formula>IF( Home_Phone_chk__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone Chk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hourly_Wage__c</fullName>
        <label>Hourly Wage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>E-Signed Card</relationshipLabel>
        <relationshipName>E_Signed_Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leads_Record_Link__c</fullName>
        <label>Leads Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notify_Email_Address__c</fullName>
        <label>Notify Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Department__c</fullName>
        <label>Other Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Title__c</fullName>
        <label>Other Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Received_From__c</fullName>
        <label>Received From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>&quot;https://uhw.my.salesforce.com/&quot; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Text__c</fullName>
        <label>Source Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Email Bounced</fullName>
                </value>
                <value>
                    <fullName>Invalid Email Address</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Shift__c</fullName>
        <label>Work Shift</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worksite__c</fullName>
        <label>Worksite</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>E-Signed Card</label>
    <listViews>
        <fullName>All_E_Signed_Cards</fullName>
        <columns>NAME</columns>
        <columns>Date_Union_Authorization_Submitted__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Other_Department__c</columns>
        <columns>Work_Shift__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Home_Phone_chk__c</columns>
        <columns>E_Signed_Card_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All E-Signed Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_Week_E_Signed_Cards</fullName>
        <columns>NAME</columns>
        <columns>Date_Union_Authorization_Submitted__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Other_Department__c</columns>
        <columns>Work_Shift__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Cell_Phone_chk__c</columns>
        <columns>Home_Phone_chk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week E-Signed Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>This_Week_E_Signed_Cards</fullName>
        <columns>NAME</columns>
        <columns>Date_Union_Authorization_Submitted__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Other_Department__c</columns>
        <columns>Work_Shift__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Cell_Phone_chk__c</columns>
        <columns>Home_Phone_chk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week E-Signed Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_E_Signed_Cards</fullName>
        <columns>NAME</columns>
        <columns>Date_Union_Authorization_Submitted__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Other_Department__c</columns>
        <columns>Work_Shift__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Cell_Phone_chk__c</columns>
        <columns>Home_Phone_chk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today E-Signed Cards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Yesterday_E_Signed_Cards</fullName>
        <columns>NAME</columns>
        <columns>Date_Union_Authorization_Submitted__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Other_Department__c</columns>
        <columns>Work_Shift__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Cell_Phone_chk__c</columns>
        <columns>Home_Phone_chk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday E-Signed Cards</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>E-Signed Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Signed Card</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>